Fix nav item spacing

--- a/Responsive Web Design/Portfolio/styles.css
+++ b/Responsive Web Design/Portfolio/styles.css
@@ -259,26 +259,31 @@ html {
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 2px 0px;
 }
 
+.nav-container > * {
+  /* border: 1px solid purple; */
+}
+
 .nav-container {
-  max-width: 500px;
+  width: 100vw;
   margin-bottom: 0.25rem;
+  display: flex;
+  align-items: baseline;
+  justify-content: space-around;
+  /* border: 1px solid yellow; */
 }
 
 .portfolio-text {
-  position: absolute;
-  top: 5;
-  left: 10;
   font-size: 0.8rem;
 }
 
-.nav-bottom-layer {
-  display: flex;
-  align-items: baseline;
-  gap: 0.3rem;
+.mid-nav {
+display: flex;
+align-items: baseline;
+gap: 0.5rem;
 }
 
 .name {
-  font-size: 1.25rem;
+  font-size: 1.6rem;
   color: var(--al-script-name);
 }
 
@@ -299,17 +304,11 @@ html {
   color: var(--navbar-link-alt-color);
 }
 
-.light-toggle-container {
-  position: absolute;
-  top: 12;
-  right: 20;
-}
-
 .light-dark-toggle {
   background: var(--light-toggle-background);
   color: var(--light-toggle-icon);
   font-size: 0.6rem;
-  border-radius: 1rem;
+  border-radius: 0.5rem;
   border: none;
   padding: 0.25rem;
   cursor: pointer;
@@ -318,6 +317,29 @@ html {
 .light-dark-toggle:active {
   background: var(--light-toggle-background);
   color: var(--light-toggle-icon);
+}
+
+@media only screen and (max-width: 400px) {
+  .nav-container {
+    justify-content:space-evenly;
+  }
+  .mid-nav {
+    flex-direction: column;
+    /* border: 1px solid red; */
+    align-items: center;
+    gap: 0.4rem;
+  }
+  .name {
+    /* border: 1px solid red; */
+    font-size: 1.6rem;
+  }
+  .light-dark-toggle {
+    margin-right: 1rem;
+  }
+  .portfolio-text {
+    /* margin-left: 1rem; */
+    font-size: 0.7rem;
+  }
 }
 
 /* WELCOME */
